Avoid a timeline-item from being cut off using break-inside

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -69,9 +69,8 @@ body {
 }
 
 @media print {
-  /* Avoid a timeline-item section from being cut off */
-  .timeline-item:nth-child(7) {
-    margin-top: 20vh;
+  .timeline-item {
+    break-inside: avoid;
   }
 }
 
